# multGet

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Configuration.cpp  Configuration.h  FileChunkDownloader.cpp  FileChunkDownloader.h  MGException.h  Manager.cpp  Manager.h  MultiGet.cpp  Writer.cpp  Writer.h
